2003/06/13 niteria
- Implemented Feature 753658: Scan for Project on Opening a Document
   (Still open question: Ability to switch this off in the options?)
- Implemented Feature 748870: Insert graphics dialogue file type filter too limited
   (Added *.jpg, *.jpeg and *.png)

2003/06/05 niteria
- Implemented Feature 675205: One-Click Project Creation for existing Documents
- Implemented Feature 588960: Disable build for unsaved files
   (==> Prompts the user to save the file instead of disabling the command)
- Fixed Bug 592338: Ghost File when cancelling "New Project"

2003/04/30 christianwelzel
- Fixed Bug 602329: File>Print and HP LaserJet 4050.

2003/03/13 christianwelzel
- Implemented Feature 614342: Last opened folder.
- Fixed Feature 535144: Specifying Output Profile in TeX file.

2003/03/08 niteria
- Fixed Bug 700129: cosh instead of \cosh
- Fixed Bug 699688: "Save As"-Dialog with wrong InitDir.

2003/03/04 christianwelzel
- Implemented Feature 551294: Storing MRU Profile with Project.
- Implemented Feature 535144: Specifying Output Profile in TeX file.

2003/01/22 niteria
- Fixed Bug 670414: syntax highlighting with verbatim env fails.
  A small problem concerning verbatim env still remains. This is mostly due to the
  old fashioned Syntaxhighlighting. Switching to a newer CrystalEdit will eliminate
  a lot of highlighting problems.

2003/01/15 niteria
- Added directory "TCHelp\SourceCodeDoc" with a doxygen configuration
  file. Run doxygen on "txc.doxy" or run "MakeSourceCodeDoc.cmd" (edit
  the path to your doxygen and HTML Help Workshop installations herein).
  You can find doxygen at www.doxygen.org and HTML Help Workshop at Microsoft.

2003/01/12 niteria
- Fixed Bug 666758: table* not shown in navigation bar
- Fixed Bug 574558: Figure* not recognised in navigation bar

2002/12/07 niteria
- Fixed Bug 646952: Cannot preview file while not compiled
- Implemented Feature 636662: Add link to dict download

2002/11/26 niteria